# xclass_fixed

applications/draw/xcpaint/: Makefile  OColorTable.cc  OXDialogs.cc  OXDialogs.h  OXPaintCanvas.cc  OXPaintCanvas.h  OXPaletteFrame.cc  OXPaletteFrame.h  README  main.cc  main.h
applications/editors/notepad/: Makefile  OXDialogs.cc  OXDialogs.h  README  main.cc  main.h
applications/examples/clock/: Makefile  main.cc
applications/examples/example-app/: Makefile  README  main.cc  toolbardef.h
applications/examples/gifview/: Makefile
applications/examples/globe/: Makefile  main.cc
applications/examples/test/: Makefile  README  combotest.cc  exception.cc  exec.cc  ftest.cc  listview.cc  shutter.cc  shutter1.cc  spinnertest.cc  wintest.cc  xdnd.cc
applications/ham/rx320/: ChangeLog  Makefile  OFreqRecord.cc  OFreqRecord.h  ORX320.cc  ORX320.h  OXDialogs.cc  OXDialogs.h  OXDisplayPanel.cc  OXDisplayPanel.h  OXFreqDB.cc  OXFreqDB.h  OXSMeter.cc  OXSMeter.h  OXScan.cc  OXSlideRuler.cc  OXTuningKnob.cc  OXTuningKnob.h  README  main.cc  main.h  menudef.h  muted0.xpm  tb-tune-1.xpm  toolbardef.h  versiondef.h
applications/multimedia/cdplay/: Makefile  OXPlayList.cc  OXPlayList.h  playlist.cc  playlist.h
applications/net/foxftp/: Makefile  OFtp.cc  OLocal.cc  OXFtpDialogs.cc  OXFtpManager.cc  OXFtpManager.h  OXLogView.cc  OXProperties.cc  OXProperties.h  OXSiteView.cc  OXSiteView.h  OXToolBarButton.cc  OXToolBarButton.h  README  TODO  main.cc  main.h
applications/net/irc/: Changelog  IRCcodes.h  Makefile  ODcc.cc  OGC.cc  OGC.h  OIrc.cc  OIrc.h  OIrcMessage.h  OLineDoc.cc  OLineDoc.h  OTcp.cc  OTcp.h  OTcpMessage.h  OTextDoc.cc  OTextDoc.h  OViewDoc.h  OXChannel.cc  OXChannel.h  OXChannelDialog.cc  OXChannelDialog.h  OXChannelEditor.cc  OXChannelEditor.h  OXChannelList.cc  OXChannelList.h  OXChatChannel.cc  OXChatChannel.h  OXColorSelect.cc  OXColorSelect.h  OXConfirmDlg.cc  OXConfirmDlg.h  OXDCCChannel.cc  OXDCCChannel.h  OXDCCFile.cc  OXDCCFile.h  OXIrc.cc  OXIrc.h  OXMsgChannel.cc  OXMsgChannel.h  OXNameList.cc  (+23 more)
applications/net/miniweb/: Makefile  OXWebHtml.cc  OXWebHtml.h  main.cc  main.h
applications/net/nrxmail/: ChangeLog  INSTALL  Makefile  OMail.cc  OMimeAtt.cc  OSession.cc  OSession.h  OXBodyView.cc  OXComposer.cc  OXComposer.h  OXFolderDelete.cc  OXFolderDelete.h  OXFolderProp.cc  OXFolderProp.h  OXMailList.cc  OXMoveMail.cc  OXMoveMail.h  OXPreferences.cc  OXPreferences.h  OXPrintBox.cc  OXPrintBox.h  OXSearchBox.cc  OXSearchBox.h  OXViewSrc.cc  OXViewSrc.h  README
applications/system/desktop/: Makefile  ODesktopLayout.h  OXDesktopContainer.cc  OXDesktopContainer.h  OXDesktopIcon.cc  OXDesktopIcon.h  OXDesktopRoot.cc  OXDesktopRoot.h  README  main.cc  main.h
applications/system/display/: Makefile  README  main.cc  (+3 more)
xclass/: Makefile.in  README  configure  configure.in
xclass/config/: Makefile.in  xc-config.in
xclass/doc/: ChangeLog  Drag-and-Drop  INSTALL  Layout.notes  MDI.notes  Makefile.in  MimeTypes.README  Programming.notes
xclass/example-app/: Makefile.in  main.cc  main.h  menudef.h
xclass/icons/: Ghostview.s.xpm  Makefile.in  myapp.oxp
xclass/include/: Makefile.in
xclass/include/xclass/: Makefile.in  O2ColumnsLayout.h  OBaseObject.h  OColor.h  OComponent.h  ODNDmanager.h  ODimension.h  OExec.h  OFileHandler.h  OFocusManager.h  OGC.h  OGifImage.h  OHashTable.h  OIdleHandler.h  OIniFile.h  OLayout.h  OListViewLayout.h  OMessage.h  OMessageCodes.h  OMimeTypes.h  OPicture.h  ORectangle.h  OResourcePool.h  OSelectedPicture.h  OString.h  OTextBuffer.h  OTimer.h  OX3dLines.h  OXAboutDialog.h  OXButton.h  OXCanvas.h  OXCheckButton.h  OXClient.h  OXColorDialog.h  OXColorSelect.h  OXComboBox.h  OXCompositeFrame.h  OXDDListBox.h  OXDockableFrame.h  OXDragWindow.h  (+50 more)
xclass/lib/libxclass/: Makefile.in  O2ColumnsLayout.cc  OColor.cc  ODNDmanager.cc  OExec.cc  OFileHandler.cc  OFocusManager.cc  OGC.cc  OGifImage.cc  OHtmlElement.cc  OHtmlUri.cc  OIdleHandler.cc  OIniFile.cc  OLayout.cc  OListViewLayout.cc  OMatrixLayout.cc  OMimeTypes.cc  OPicture.cc  OResourcePool.cc  ORowColumnLayout.cc  OSelectedPicture.cc  OString.cc  OTextBuffer.cc  OTimer.cc  OXAboutDialog.cc  OXButton.cc  OXCanvas.cc  OXCheckButton.cc  OXClient.cc  OXColorDialog.cc  OXColorSelect.cc  OXComboBox.cc  OXCompositeFrame.cc  OXDDListBox.cc  OXDockableFrame.cc  OXDragWindow.cc  OXFSDDListBox.cc  OXFileDialog.cc  OXFileList.cc  OXFontDialog.cc  (+43 more)
xclass/lib/libxclass/icons/: mb-asterisk.s.xpm  mb-exclamation.s.xpm  mb-question.s.xpm  mb-stop.s.xpm
xclass/test/: Makefile.in  README  exec.cc  favordlg.cc  ftest.cc  helptest.cc  mditest.cc  menu_test.xpm  resizer.cc  shutter.cc  shutter1.cc  test4.cc  wintest.cc  xdnd.cc
(+90 files in other folders)
